--- a/index.html
+++ b/index.html
@@ -10,6 +10,284 @@
     <!-- built files will be auto injected -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.12.0/matter.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+
+    <script>
+  const Matter = window.Matter;
+  const Engine = Matter.Engine;
+  const World = Matter.World;
+  const Bodies = Matter.Bodies;
+  const Body = Matter.Body;
+
+  let engine;
+  let world;
+
+  const exaustClouds = 25;
+  let car;
+  let computerCar;
+  let ball;
+
+  let goalHeight;
+  let goalWaitPeriod = false;
+
+  let playerScore = 0;
+  let computerScore = 0;
+
+  let game;
+
+  class Wall {
+    constructor(x, y, w, h, a) {
+      const options = {
+        friction: 0.5,
+        restitution: 0.5,
+        angle: a,
+        isStatic: true,
+      };
+      this.body = Bodies.rectangle(x, y, w, h, options);
+      this.w = w;
+      this.h = h;
+      World.add(world, this.body);
+    }
+  }
+
+  class Ball {
+    constructor() {
+      this.position = createVector(width / 2, height / 2);
+      this.radius = width / 32;
+      const options = {
+        restitution: 0.1,
+        friction: 1,
+        density: 0.001,
+        frictionAir: 0.02,
+      }
+      this.body = Bodies.circle(
+        this.position.x, this.position.y, this.radius / 2, options,
+      );
+      World.add(world, this.body);
+    }
+
+    didScore() {
+      const [x, y] = [this.body.position.x, this.body.position.y];
+      const topOfGoalY = height / 2 + goalHeight / 2;
+      const bottomOfGoalY = height / 2 - goalHeight / 2;
+      const withinGoalRange = y < topOfGoalY && y > bottomOfGoalY;
+      if (withinGoalRange) {
+        return (x <= this.radius / 2 || x >= width - this.radius / 2);
+      }
+      return false;
+    }
+
+    render() {
+      this.position.x = this.body.position.x
+      this.position.y = this.body.position.y
+
+      push();
+      translate(this.body.position.x, this.body.position.y);
+      rotate(this.body.angle);
+      loadImage('https://twemoji.maxcdn.com/2/72x72/1f35f.png', function (img) {
+        image(img, -7, 0);
+      });
+      ellipse(0, 0, this.radius);
+      fill(54);
+      pop();
+    }
+  }
+
+  class Car {
+    constructor(paintColor, startX) {
+      const startY = height / 2;
+      this.position = createVector(startX, startY);
+      this.width = width / 36
+      this.length = this.width * 2
+      this.isAccelerating = false
+      this.rotation = 0
+      this.color = paintColor;
+      this.history = [];
+      const options = { density: 1, friction: 0, mass: 50, frictionAir: 1 }
+      this.body = Bodies.circle(
+        this.position.x, this.position.y, this.width, options
+      )
+      World.add(world, this.body)
+      if (startX > width / 2) {
+        Body.setAngle(this.body, PI)
+      }
+    }
+
+    update() {
+      var f = 0.8;
+      var force = { x: 0, y: 0 };
+      if (keyStates[38]) {
+        force.y -= f;
+      }
+      if (keyStates[39]) {
+        force.x += f;
+      }
+      if (keyStates[40]) {
+        force.y += f;
+      }
+      if (keyStates[37]) {
+        force.x -= f;
+      }
+      this.move(force);
+      }
+
+    accelerating(isAccelerating) {
+      this.isAccelerating = isAccelerating
+    }
+
+    move(force) {
+      Body.applyForce(this.body, this.body.position, force);
+    }
+
+    pointTowardsBall() {
+      const desired = p5.Vector.sub(ball.position, this.position)
+      const angle = desired.heading()
+      Body.setAngle(this.body, angle);
+    }
+
+    render() {
+      const angle = this.body.angle;
+      push()
+      rectMode(CENTER)
+      translate(this.body.position.x, this.body.position.y)
+      rotate(angle);
+      // car body
+      // fill(this.color)
+      strokeWeight(2);
+      stroke('red')
+      ellipse(0, 0, 40);
+      const carWidth = this.width;
+      pop()
+    }
+  }
+
+  function setup() {
+    const h = 700
+    // keep field dimensions nice
+    const w = 900;
+
+    createCanvas(w, h);
+
+    goalHeight = width / 6
+
+    engine = Engine.create();
+    world = engine.world;
+
+    // disable matter.js gravity
+    engine.world.gravity.y = 0;
+
+    addWalls()
+
+    const redHexVals = [255, 100, 100]
+    const playerStartX = width / 2;
+    car = new Car(redHexVals, playerStartX)
+    const blueHexVals = [100, 100, 255]
+    const computerStartX = 3 * width / 4;
+    // computerCar = new Car(blueHexVals, computerStartX)
+
+    ball = new Ball()
+  }
+
+  // Maintain keyboard state
+  var keyStates = {};
+  document.onkeydown = function (evt) {
+    keyStates[evt.keyCode] = true;
+  };
+  document.onkeyup = function (evt) {
+    delete keyStates[evt.keyCode];
+  };
+
+  function draw() {
+    if (goalWaitPeriod) {
+      // Screen Shakes On Goal (User feedback)
+      translate(random(-13, 13), random(-13, 13));
+    }
+
+    drawSoccerField();
+
+    Engine.update(engine)
+
+    car.render()
+    car.update()
+
+    // computerCar.render()
+    // computerCar.update()
+
+    // computerCar.accelerating(true)
+    // computerCar.pointTowardsBall()
+
+
+    ball.render()
+    if (ball.didScore()) {
+      const [x, y] = [ball.body.position.x, ball.body.position.y]
+      x < width / 2 ? computerScore++ : playerScore++;
+      Body.setPosition(ball.body, { x: width / 2, y: height / 2 });
+      Body.setVelocity(ball.body, { x: 0, y: 0 })
+      goalWaitPeriod = true
+      setTimeout(function () {
+        goalWaitPeriod = false
+      }, 1000);
+    }
+
+    textSize(18);
+    noStroke();
+    fill(255, 100, 100);
+    text("player", width / 2 - 100, height / 16);
+    fill(100, 100, 255);
+    text("computer", width / 2 + 50, height / 16)
+    fill(4);
+    textSize(48);
+    text(playerScore, width / 2 - 88, height / 6);
+    text(computerScore, width / 2 + 78, height / 6);
+
+    if (goalWaitPeriod) {
+      fill(random(255), random(255), random(255));
+      textSize(64);
+      text("GOOOOOOAL", width / 2 - 200, height / 2)
+    }
+
+
+  }
+
+
+  function drawSoccerField() {
+    background(254)
+    noFill()
+    stroke('#F2F2F2')
+    strokeWeight(3)
+
+    // center field line
+    line(width / 2, 0, width / 2, height)
+    ellipse(width / 2, height / 2, width / 6)
+
+    // left goalie box
+    rect(-2, height / 2 - width / 6, width / 6, width / 3)
+    stroke(255, 100, 100);
+    rect(0, height / 2 - width / 12, width / 18, goalHeight)
+    strokeWeight(10);
+    line(0, height / 2 - width / 12, 0, height / 2 - width / 12 + goalHeight)
+    // right goalie box
+    strokeWeight(3);
+    stroke('#F2F2F2');
+    rect(width - width / 7, height / 2 - width / 6, width / 6, width / 3)
+    stroke(100, 100, 255);
+    rect(width - width / 18, height / 2 - width / 12, width / 18, goalHeight);
+    strokeWeight(10);
+    line(width, height / 2 - width / 12, width, height / 2 - width / 12 + goalHeight);
+    strokeWeight(1);
+    stroke(0);
+  }
+
+  function addWalls() {
+    const wallThickness = 500;
+    const wt2 = wallThickness / 2;
+
+    bottomWall = new Wall(width / 2, height + wt2, width, wallThickness, 0)
+    topWall = new Wall(width / 2, -wt2, width, wallThickness, 0)
+
+    leftWall = new Wall(-wt2, height / 2, height, wallThickness, PI / 2)
+    rightWall = new Wall(width + wt2, height / 2, height, wallThickness, PI / 2)
+  }
+    </script>
   </body>
 </html>
