--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       this.position = createVector(width / 2, height / 2);
       this.radius = width / 32;
       const options = {
-        restitution: 0.1,
+        restitution: 0.5,
         friction: 1,
         density: 0.001,
         frictionAir: 0.02,
@@ -103,7 +103,7 @@
       this.rotation = 0
       this.color = paintColor;
       this.history = [];
-      const options = { density: 1, friction: 0, mass: 50, frictionAir: 1 }
+      const options = { density: 1, friction: 0, mass: 50, frictionAir: 0.1 }
       this.body = Bodies.circle(
         this.position.x, this.position.y, this.width, options
       )
@@ -114,7 +114,7 @@
     }
 
     update() {
-      var f = 0.8;
+      var f = 0.4 ;
       var force = { x: 0, y: 0 };
       if (keyStates[38]) {
         force.y -= f;
@@ -209,7 +209,7 @@
 
     car.render()
     car.update()
-
+    // console.log(engine)
     // computerCar.render()
     // computerCar.update()
 
